working on feedback points

--- a/src/app/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/authentication/forgot-password/forgot-password.component.html
@@ -22,9 +22,14 @@
                       
                       <input type="email" formControlName="email" class="form-control auth-control" id="email"
                         placeholder="Email" [ngClass]="{ 'is-invalid': submitted && form['email'].errors }">
+                        
                       <div *ngIf="submitted && form['email'].errors" class="invalid-feedback">
-                        <div *ngIf="form['email'].errors['required']"><mat-icon>info</mat-icon> Email is required</div>
-                        <div *ngIf="form['email'].errors['email']"><mat-icon>info</mat-icon> Email must be a valid email address</div>
+                        <div *ngIf="form['email'].errors['required']">
+                          <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">Email is required</span>
+                          </div>
+                        <div *ngIf="form['email'].errors['email']">
+                          <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">Email must be a valid email address</span>
+                            </div>
                       </div>
                     </div>
 
@@ -50,7 +55,10 @@
     </div>
     <div class="col-lg-6">
       <div class="auth-bg">
-        <div class="bg-overlay"></div>
+        <div class="bottom-text">
+          <h3 class="text-fff font-36 font-weight-medium text-center">Advancing the Care Continuum</h3>
+          <p class="text-fff font-18 fw-400 text-center mt-3" >PATH is a freely accessible, evidence-based assessment tool that is designed to assess caregiver’s preparedness to transition patients home.</p>
+        </div>
       </div>
     </div>
   </div>
