--- a/src/assets/scss/pages/_extra_pages.scss
+++ b/src/assets/scss/pages/_extra_pages.scss
@@ -258,6 +258,7 @@
   line-height: 1.2;
   text-transform: uppercase;
   letter-spacing: 1px;
+  box-shadow: none !important;
   cursor: pointer;
   transition: all 0.4s;
   &:hover {
