--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -22,9 +22,11 @@
                           <input type="password" formControlName="password" class="form-control auth-control"
                             id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
                             placeholder="Password" />
-                          
+                            <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon> 
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
-                            <div *ngIf="form['password'].errors['required']">Password is required</div>
+                            <div *ngIf="form['password'].errors['required']">
+                                <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> Password is required</span>
+                               </div>
                           </div>
                         </div>
 
@@ -33,9 +35,12 @@
                           <input type="password" formControlName="password" class="form-control auth-control"
                             id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
                             placeholder="Password" />
+                            <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon> 
                           
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
-                            <div *ngIf="form['password'].errors['required']">The Password do not match. Please try again.</div>
+                            <div *ngIf="form['password'].errors['required']">
+                                <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> The Password do not match. Please try again.</span>
+                               </div>
                           </div>
                         </div>
 
@@ -62,8 +67,11 @@
       </div>
       <div class="col-lg-6">
         <div class="auth-bg">
-          <div class="bg-overlay"></div>
-        </div>
+            <div class="bottom-text">
+              <h3 class="text-fff font-36 font-weight-medium text-center">Advancing the Care Continuum</h3>
+              <p class="text-fff font-18 fw-400 text-center mt-3" >PATH is a freely accessible, evidence-based assessment tool that is designed to assess caregiver’s preparedness to transition patients home.</p>
+            </div>
+          </div>
       </div>
     </div>
   </div>
