--- a/src/assets/scss/pages/_auth.scss
+++ b/src/assets/scss/pages/_auth.scss
@@ -3,10 +3,10 @@
 //
 
 .auth-bg {
-  background-image: url('../../images/banner-image/right_img.png');
+  background-image: url('../../images/banner-image/right-img.svg');
   height: 100vh;
   background-size: cover;
-  background-position: center;
+  // background-position: center;
   .bg-overlay {
     position: absolute;
     height: 100%;
@@ -19,6 +19,14 @@
     z-index: -1;
     background-color: #292626;
   }
+  .bottom-text{
+    position: absolute;
+    bottom: 8px; 
+    margin: 0px 61px;
+    h3{
+      margin: 0px 30px;
+    }
+  }
 
   @media (max-width: 991px) {
     display: none;
@@ -29,6 +37,7 @@
   height: 100vh;
   display: flex;
   background-color: #ffffff;
+
 }
 
 .auth-form-group {
