--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,11 +4,35 @@
 //color
 .text--1A1A1A{color: #1A1A1A !important;}
 .text--919AA3{color: #919AA3 !important;} 
-
+.text-fff{color: #fff !important;}
 //font-weight
 .fw-500{font-weight: 500 !important;}  
 .fw-700{font-weight: 700 !important;}  
 .fw-850 {font-weight: 850 !important;}
 .fw-600 {font-weight: 600 !important;}
 .fw-500 {font-weight: 500 !important;}
+.fw-400 {font-weight: 400 !important;}
+ 
+.font-16 {font-size: 16px !important;}
+
+.aligned-with-icon{
+    position: absolute; 
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.mat-info-icon{
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 4px;
+}
+
+.pwd-icon{
+    position: absolute;
+    top: 18px;
+    right: 10px;
+    bottom: 0;
+    color: #4B9CD5;
+}
+
  
