--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,4 +35,18 @@
     color: #4B9CD5;
 }
 
+.sign-out-btn{
+    position: absolute;
+    bottom: 8px;  
+    background-color: #9454A4;
+    width: 217.384px;
+    height: 48px;
+    flex-shrink: 0;
+    border-radius: 4.559px; 
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    margin: 20px;
+}
  
