--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -177,6 +177,11 @@
       margin: 0px 10px;
       line-height: 24px;
     }
+    .profile-info{
+      line-height: 10px;
+      margin-top: 16px;
+      text-align: right;
+    }
     .user_profile {
       .dropdown-toggle {
         cursor: pointer;
