resolved jira issues

--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -21,8 +21,8 @@
                         <div class="form-group auth-form-group mb-4"> 
                           <input type="password" formControlName="password" class="form-control auth-control"
                             id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
-                            placeholder="Password" />
-                            <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon> 
+                            placeholder="Password" /> 
+                            <mat-icon class="pwd-icon" (click)="toggleIcon1()">{{ showIcon ? 'visibility' : 'visibility_off' }}</mat-icon>
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
                             <div *ngIf="form['password'].errors['required']">
                                 <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> Password is required</span>
@@ -35,8 +35,8 @@
                           <input type="password" formControlName="password" class="form-control auth-control"
                             id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
                             placeholder="Password" />
-                            <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon> 
-                          
+                            
+                            <mat-icon class="pwd-icon" (click)="toggleIcon2()">{{ showIcon2 ? 'visibility' : 'visibility_off' }}</mat-icon>
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
                             <div *ngIf="form['password'].errors['required']">
                                 <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> The Password do not match. Please try again.</span>
