--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -28,7 +28,8 @@
                           <div *ngIf="form['email'].errors['required']">
                             <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">Email is required</span>
                             </div>
-                          <div *ngIf="form['email'].errors['email']"><mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> Email must be a valid email address</span>
+                          <div *ngIf="form['email'].errors['email']">
+                            <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> Email must be a valid email address</span>
                            </div>
                         </div>
                       </div>
@@ -39,7 +40,11 @@
                         <input type="password" formControlName="password" class="form-control auth-control"
                           id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
                           placeholder="Password" /> 
-                            <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon>  
+
+                      
+                            <mat-icon class="pwd-icon" (click)="toggleIcon()">{{ showIcon ? 'visibility' : 'visibility_off' }}</mat-icon>
+                         
+                            <!-- <mat-icon  class="pwd-icon"  >remove_red_eye</mat-icon>   -->
                         <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
                           <div *ngIf="form['password'].errors['required']">	<mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">Password is required</span></div>
                         </div>
