--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -4,7 +4,7 @@
       <h4 class="text--1A1A1A font-16 fw-600">No Active Users Yet!</h4>
       <p class="text--919AA3 font-13 fw-400">No active users yet! Look like no active users at here to start taking care. No users invited yet!</p>
       <a><img src="assets/images/dashbord/ark_user.svg" alt="" /> </a><br>
-      <button class="invite-user-btn">Invite User</button>
+      <button class="invite-user-btn">Invite Users</button>
     </div>
     
   </div>
