--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -61,7 +61,7 @@
             </ul>
           </li>
 
-         <li> <button   class="sign-out-btn"> <app-feather-icons [icon]="'log-out'" [class]="'user-menu-icons mr-3'"></app-feather-icons>Sign in</button></li>
+         <li> <button   class="sign-out-btn"> <app-feather-icons class="user-icon" [icon]="'log-in'" [class]="'user-menu-icons'"></app-feather-icons>Sign Out</button></li>
         </ul>
 
        
