--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,9 @@
 .text--1A1A1A{color: #1A1A1A !important;}
 .text--919AA3{color: #919AA3 !important;} 
 .text-fff{color: #fff !important;}
+.clr--4C9CD4 {color: #4C9CD4 !important;}
+.clr--9454A4 {color: #9454A4 !important;}
+.clr--56DAA5 {color: #56DAA5 !important;}
 //font-weight
 .fw-500{font-weight: 500 !important;}  
 .fw-700{font-weight: 700 !important;}  
