--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -16,33 +16,28 @@
                   </div>
   
                   <div class="p-2">
-                    <form   >
-                        <label class="form-label">Create Password</label>
-                        <div class="form-group auth-form-group mb-4"> 
-                          <input type="password" formControlName="password" class="form-control auth-control"
-                            id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
-                            placeholder="Password" /> 
-                            <mat-icon class="pwd-icon" (click)="toggleIcon1()">{{ showIcon ? 'visibility' : 'visibility_off' }}</mat-icon>
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"  >
+                      <label class="form-label">Create Password</label>
+                      <div class="form-group auth-form-group mb-4"> 
+                        <input type="password" formControlName="password" class="form-control auth-control"
+                          id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
+                          placeholder="Password" />  
+                            <mat-icon class="pwd-icon" (click)="toggleIcon1()">{{ showIcon1 ? 'visibility' : 'visibility_off' }}</mat-icon> 
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
-                            <div *ngIf="form['password'].errors['required']">
-                                <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> Password is required</span>
-                               </div>
+                            <!-- <div *ngIf="form['password'].errors['required']">	<mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">Password is required</span></div> -->
                           </div>
-                        </div>
+                      </div>
 
                         <label class="form-label">Confirm Password</label>
-                        <div class="form-group auth-form-group mb-4"> 
-                          <input type="password" formControlName="password" class="form-control auth-control"
-                            id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
-                            placeholder="Password" />
-                            
-                            <mat-icon class="pwd-icon" (click)="toggleIcon2()">{{ showIcon2 ? 'visibility' : 'visibility_off' }}</mat-icon>
+                      <div class="form-group auth-form-group mb-4"> 
+                        <input type="password" formControlName="password" class="form-control auth-control"
+                          id="password" [ngClass]="{ 'is-invalid': submitted && form['password'].errors }"
+                          placeholder="Password" />  
+                            <mat-icon class="pwd-icon" (click)="toggleIcon2()">{{ showIcon2 ? 'visibility' : 'visibility_off' }}</mat-icon> 
                           <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
-                            <div *ngIf="form['password'].errors['required']">
-                                <mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon"> The Password do not match. Please try again.</span>
-                               </div>
+                            <div *ngIf="form['password'].errors['required']">	<mat-icon class="mat-info-icon">info</mat-icon><span class="aligned-with-icon">The passwords do not match. Please try again.</span></div>
                           </div>
-                        </div>
+                      </div>
 
   
                       <div class="container-login100-form-btn">
