--- a/src/assets/scss/pages/_extra_pages.scss
+++ b/src/assets/scss/pages/_extra_pages.scss
@@ -250,7 +250,7 @@
   padding: 0 20px;
   width: 100%;
   height: 50px !important;
-  border-radius: 10px;
+  border-radius: 8px !important;
   background: #9155A3 !important;
   font-family: Inter;
   font-size: 18px;
