--- a/src/assets/scss/theme/_theme-white.scss
+++ b/src/assets/scss/theme/_theme-white.scss
@@ -185,7 +185,7 @@
 .logo-white {
   .navbar-header {
     background-color: $theme-white;
-
+    border-right: 1px solid #E7E8F2;
     .logo-name {
       color: #6f6f6f;
       font-weight: 500;
