resolved jira issues , feedback point and added admin-dashboard page

--- a/src/app/dashboard/dashboard2/dashboard2.component.html
+++ b/src/app/dashboard/dashboard2/dashboard2.component.html
@@ -46,5 +46,11 @@
       
     </div>
     
+    <div class="invite-user">
+     
+      <a><img src="assets/images/dashbord/background-logo.svg" alt="" /> </a> 
+ 
+    </div>
+    
   </div>
 </section>
