update otp verification

--- a/src/app/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/authentication/forgot-password/forgot-password.component.html
@@ -11,7 +11,7 @@
                     
                      <div class="mt-5">
                        <h4 class="font-18 text--1A1A1A fw-600 mt-4">Forgot your Password</h4>
-                       <p class="text-muted">Enter your registered email address</p>
+                       <p class="text-muted">Provide registered email to receive OTP for resetting the password.</p>
                     </div>
                 </div>
 
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="mt-2 text-center">
-                   <a routerLink="/authentication/signin" class="text-decoration-underline font-weight-medium  text--919AA3">
+                   <a routerLink="/authentication/signin" class="text-decoration-underline font-weight-medium  clr--9454A4">
                       Sign In </a> 
                 </div>
               </div>
