--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -50,7 +50,7 @@
                   </div>
   
                   <div class="mt-2 text-center">
-                     <a routerLink="/authentication/signin" class="text-decoration-underline font-weight-medium  text--919AA3">
+                     <a routerLink="/authentication/signin" class="text-decoration-underline font-weight-medium   clr--9454A4">
                         Sign In </a> 
                   </div>
                 </div>
