--- a/src/app/dashboard/dashboard2/dashboard2.component.html
+++ b/src/app/dashboard/dashboard2/dashboard2.component.html
@@ -4,41 +4,44 @@
     <!-- Widgets -->
     <div class="row">
       <div class="col-lg-4 col-sm-6">
-        <div class="counter-box ">
+        <div class="counter-box counter-box-1">
           <div class="row">
-            <div class="col-3">
-              <img src="assets/images/dashbord/ark_org_admin.svg" alt="" />
-            </div>
+            
             <div class="col-9">
               <h2 class="font-16 fw-600 text--1A1A1A">Active Organization Admin</h2>
               <p class="clr--4C9CD4 font-36 fw-600 m-0">12</p>
+            </div>
+            <div class="col-3">
+              <img src="assets/images/dashbord/ark_org_admin.svg" alt="" />
             </div>
           </div>
            
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <div class="counter-box  ">
+        <div class="counter-box  counter-box-2">
           <div class="row">
-            <div class="col-3">
-              <img src="assets/images/dashbord/ark_caregiver.svg" alt="" />
-            </div>
+           
             <div class="col-9">
               <h2 class="font-16 fw-600 text--1A1A1A">Active Caregivers</h2>
               <p class="clr--9454A4 font-36 fw-600 m-0">20</p>
+            </div>
+            <div class="col-3">
+              <img src="assets/images/dashbord/ark_professional.svg" alt="" />
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <div class="counter-box ">
+        <div class="counter-box counter-box-3">
           <div class="row">
-            <div class="col-3">
-              <img src="assets/images/dashbord/ark_professional.svg" alt="" />
-            </div>
+            
             <div class="col-9">
               <h2 class="font-16 fw-600 text--1A1A1A">Active Professionals</h2>
               <p class="clr--56DAA5 font-36 fw-600 m-0">12</p>
+            </div>
+            <div class="col-3">
+              <img src="assets/images/dashbord/ark_caregiver.svg" alt="" />
             </div>
           </div>
         </div>
