--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -61,7 +61,11 @@
             </ul>
           </li>
 
-         <li> <button   class="sign-out-btn"> <app-feather-icons class="user-icon" [icon]="'log-in'" [class]="'user-menu-icons'"></app-feather-icons>Sign Out</button></li>
+         <li> <button   class="sign-out-btn"> <app-feather-icons class="user-icon" [icon]="'log-in'" [class]="'user-menu-icons'"></app-feather-icons>Sign Out</button>
+         
+        </li>
+
+
         </ul>
 
        
