--- a/src/assets/scss/pages/_extra_pages.scss
+++ b/src/assets/scss/pages/_extra_pages.scss
@@ -254,6 +254,7 @@
   background: #9155A3 !important;
   font-family: Inter;
   font-size: 18px;
+  font-weight: 600;
   color: #fff !important;
   line-height: 1.2; 
   letter-spacing: 1px;
