--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -56,7 +56,7 @@
                           </label>
                         </div>
                         <div>
-                          <a class="text--919AA3 text-decoration-underline font-16" routerLink="/authentication/forgot-password" >Forgot Password?</a>
+                          <a class="text--919AA3 text-decoration-underline font-16 clr--9454A4 " routerLink="/authentication/forgot-password" >Forgot Password?</a>
                         </div>
                       </div>
 
