--- a/docs/assets/scss/pages/_extra_pages.scss
+++ b/docs/assets/scss/pages/_extra_pages.scss
@@ -253,7 +253,8 @@
   border-radius: 8px !important;
   background: #9155A3 !important;
   font-family: Inter;
-  font-size: 18px;
+  font-size: 18px !important;
+  font-weight: 600 !important;
   color: #fff !important;
   line-height: 1.2; 
   letter-spacing: 1px;
