--- a/src/app/authentication/otp-verification/otp-verification.component.scss
+++ b/src/app/authentication/otp-verification/otp-verification.component.scss
@@ -1,10 +1,12 @@
- .material-icons {
+.change-email{
+    .material-icons {
         font-size: 24px; 
         width: 24px; 
         height: 24px; 
-        margin-left: 1rem;
-        color: #9454A4;
+        margin-left: 1rem; 
       }
    
+}
+
 
   
