--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
         (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-expanded="false"></a>
       <!-- mobile menu bars -->
       <a href="#" onClick="return false;" class="bars" (click)="mobileMenuSidebarOpen($event,'overlay-open')"></a>
-      <a class="navbar-brand" routerLink="dashboard/main">
+      <a class="navbar-brand" routerLink="dashboard/dashboard-day1">
         <img src="assets/images/logo.svg" alt="" /> 
       </a>
     </div>
