--- a/src/app/authentication/otp-verification/otp-verification.component.html
+++ b/src/app/authentication/otp-verification/otp-verification.component.html
@@ -35,12 +35,12 @@
                       </div>
 
                       <div class="text-center mb-3"> 
-                        <span class="font-16 fw-400 text--919AA3" routerLink="/authentication/reset-password"  >Don’t receive OTP? <a routerLink="/authentication/signin" class="text-decoration-underline font-weight-medium  clr--9454A4 font-16 fw-400" >
+                        <span class="font-16 fw-400 text--919AA3" routerLink="/authentication/signin"  >Don’t receive OTP? <a   class="text-decoration-underline font-weight-medium  clr--9454A4 font-16 fw-400" >
                             Resend </a> </span>
                       </div>
-  
+                      
                       <div class="container-login100-form-btn">
-                        <button mat-raised-button color="primary" class="login100-form-btn font-18 fw-600"   >
+                        <button mat-raised-button routerLink="/authentication/reset-password" color="primary" class="login100-form-btn font-18 fw-600"   >
                             Verify & Submit
                         </button>
                       </div>
@@ -52,7 +52,7 @@
   
                   <div class="mt-2 text-center d-flex justify-content-center change-email"> 
                     <mat-icon class="material-icons clr--9454A4" >arrow_back</mat-icon>
-                    <span routerLink="/authentication/signin"  class="text-decoration-underline font-weight-medium icon-name  clr--9454A4  font-16 fw-400">Change email</span>  
+                    <span routerLink="/authentication/forgot-password"  class="text-decoration-underline font-weight-medium icon-name  clr--9454A4  font-16 fw-400">Change email</span>  
                   </div>
 
                   
