--- a/src/app/dashboard/dashboard2/dashboard2.component.scss
+++ b/src/app/dashboard/dashboard2/dashboard2.component.scss
@@ -40,6 +40,12 @@
     .invite-user{
         left: 57% !important;
     }
+    .counter-box{
+     img{
+        margin-top: -13px;
+        margin-left: 20px;
+     }   
+    }
 }
 
 /* (768x1024) iPad 1 & 2, Portrait */
@@ -54,4 +60,54 @@
     .invite-user{
         left: 48% !important;
     }
+}
+
+@media  screen and (max-width: 1280px) {
+    counter-box{
+        img{
+           margin-top: -13px;
+           margin-left: 11px;
+        }   
+       }
+}
+
+/* (2048x1536) iPad 3 */
+@media only screen and (min-device-width: 1536px) and (max-device-width: 2048px) {
+    counter-box{
+        img{
+            margin-top: -13px;
+            margin-left: 26px;
+        }   
+       }
+}
+
+
+/* (1440x900) WXGA+ Display */
+@media  screen and (max-width: 1440px) {
+    counter-box{
+        img{
+            margin-top: -13px;
+            margin-left: 14px;
+        }   
+       }
+}
+/* (1680x1050) WSXGA+ Display */
+@media  screen and (max-width: 1680px) {
+    counter-box{
+        img{
+            margin-top: -13px;
+            margin-left: 14px;
+        }   
+       }
+}
+
+
+/* (1920x1080) Full HD Display */
+@media  screen and (max-width: 1919px) and (max-device-width: 720px){
+    counter-box{
+        img{
+            margin-top: -13px;
+            margin-left: 14px;
+        }   
+       }
 }
