--- a/src/app/dashboard/dashboard2/dashboard2.component.html
+++ b/src/app/dashboard/dashboard2/dashboard2.component.html
@@ -8,8 +8,8 @@
           <div class="row">
             
             <div class="col-9">
-              <h2 class="font-16 fw-600 text--1A1A1A">Active Organization Admin</h2>
-              <p class="clr--4C9CD4 font-36 fw-600 m-0">12</p>
+              <h2 class="font-36 fw-600 text--1A1A1A">12</h2>
+              <p class="text--1A1A1A  font-16 fw-600 m-0">Active Organization Admin</p>
             </div>
             <div class="col-3">
               <img src="assets/images/dashbord/ark_org_admin.svg" alt="" />
@@ -23,8 +23,10 @@
           <div class="row">
            
             <div class="col-9">
-              <h2 class="font-16 fw-600 text--1A1A1A">Active Caregivers</h2>
-              <p class="clr--9454A4 font-36 fw-600 m-0">20</p>
+
+              <h2 class="font-36 fw-600 text--1A1A1A">20</h2>
+              <p class="text--1A1A1A  font-16 fw-600 m-0">Active Caregivers</p>
+ 
             </div>
             <div class="col-3">
               <img src="assets/images/dashbord/ark_professional.svg" alt="" />
@@ -37,8 +39,9 @@
           <div class="row">
             
             <div class="col-9">
-              <h2 class="font-16 fw-600 text--1A1A1A">Active Professionals</h2>
-              <p class="clr--56DAA5 font-36 fw-600 m-0">12</p>
+              <h2 class="font-36 fw-600 text--1A1A1A">12</h2>
+              <p class="text--1A1A1A  font-16 fw-600 m-0">Active Professionals</p>
+ 
             </div>
             <div class="col-3">
               <img src="assets/images/dashbord/ark_caregiver.svg" alt="" />
